# mykaggle

./: .gitignore  Dockerfile  Dockerfile.cpu  README.md  README.rst  docker-compose-cpu.yml  docker-compose.yml  mypy.ini  pyproject.toml  tox.ini
.circleci/: config.yml
.devcontainer/: devcontainer.json  docker-compose.yml
kaggle_datasets/: dataset-metadata.json
kaggle_datasets_ckpt/: README.md  dataset-metadata.json
kaggle_datasets_git/: README.md  dataset-metadata.json
mlflow/: .zshenv  Dockerfile.mlflow  Dockerfile.nginx  docker-compose.yml  docker_entrypoint.sh  nginx.conf
mykaggle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mykaggle/dataloader/: dataloader.py  dataset.py
mykaggle/feature/: __init__.py  base.py  feature_factory.py
mykaggle/feature/transform/: base.py  groupby.py  pivot.py
mykaggle/lib/: arg_parser.py  lgbm_util.py  ml_logger.py  ops.py  pandas_util.py  plot.py  registrable.py  routine.py  slack.py  torch_util.py
mykaggle/lib/logger/: factory.py  logger.py  ml_logger.py  std_logger.py
mykaggle/model/: activation.py  common.py  gbdt.py  get_model.py  lm_model_with_custom_head.py  transformer.py  transformer_util.py
mykaggle/trainer/: base.py  cv_strategy.py  inference.py  stacking.py  util.py
mykaggle/trainer/loss/: torch.py
mykaggle/trainer/optimizer/: torch.py
mykaggle/transform/: groupby.py  pivot.py
mykaggle/util/: config.py  logger.py  ml_logger.py  routine.py  sheet.py  slack.py
notebook/: 001_eda.ipynb
sample/cv/: effb4_multiclass_classification.py  swin_single_regression.py
sample/nlp/: bert_binary_classification.py  bert_multiclass_classification.py  bert_regression.py  lgbm_binary_classification.py
sample/tabular/: lgbm_binary_classification.py
script/: setup_competition.sh  setup_kaggle_dataset.sh  setup_torch.sh  upload_ckpt.sh  upload_data.sh
tests/: run  test_mykaggle.py
tests/data/: dummy.csv
tests/mykaggle/config/: sample.json  sample.txt  sample.yml
tests/mykaggle/feature/transform/: test_groupby.py  test_pivot.py
tests/mykaggle/lib/: test_pandas_util.py  test_routine.py  test_torch_util.py
tests/mykaggle/model/: test_gbdt.py  test_transformer.py
tests/mykaggle/trainer/loss/: torch.py
tests/mykaggle/trainer/optimizer/: torch.py
tests/mykaggle/transform/: test_groupby.py  test_pivot.py
tests/mykaggle/util/: test_config.py
