[tool.poetry]
name = "mykaggle"
version = "0.1.0"
description = ""
authors = ["cfiken <cfiken@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.10.4"
jupyter = "*"
jupyterlab = "*"
numpy = "*"
matplotlib = "*"
pillow = "*"
pandas = "*"
seaborn = "*"
lightgbm = "*"
fastprogress = "*"
kaggle = "*"
pyyaml = "*"
mlflow = "*"
python-dotenv = "^0.15.0"
boto3 = "^1.17.23"
types-PyYAML = "^5.4.6"
types-requests = "^2.25.6"
category-encoders = "^2.5.0"
protobuf = "^3.20.0"
opencv-python = "^4.6.0.66"
pyarrow = "^8.0.0"
datasets = "^2.3.2"
fsspec = "^2022.5.0"

[tool.poetry.group.full.dependencies]
# pytorch は環境に応じて入れ方変えるため一律コメントアウト
# torch = "^1.12.0"
# torch = { version = "=1.11.0+cu113", source = "pytorch-cu113" }
# torchvision = "*"
# torchvision = { version = "=0.12.0+cu113", source = "pytorch-cu113" }
xgboost = "*"
catboost = "*"
timm = "^0.5.4"
transformers = "*"
sentencepiece = "^0.1.96"
albumentations = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
mypy = "*"
autopep8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

