[tool.poetry]
name = "mykaggle"
version = "0.1.0"
description = ""
authors = ["cfiken <cfiken@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.10.4"
jupyter = "*"
jupyterlab = "*"
numpy = "*"
matplotlib = "*"
pillow = "*"
pandas = "*"
seaborn = "*"
lightgbm = "*"
xgboost = "*"
catboost = "*"
fastprogress = "*"
kaggle = "*"
pyyaml = "*"
mlflow = "*"
python-dotenv = "^0.15.0"
boto3 = "^1.17.23"
types-PyYAML = "^5.4.6"
types-requests = "^2.25.6"
category-encoders = "^2.5.0"
protobuf = "^3.20.0"
opencv-python = "^4.6.0.66"
pyarrow = "^8.0.0"
datasets = "^2.3.2"
fsspec = "^2022.5.0"
torch = "^1.12.0"
albumentations = "^1.2.0"
timm = "^0.5.4"
transformers = "*"


[tool.poetry.group.full]
optional = true

[tool.poetry.group.full.dependencies]
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
mypy = "*"
autopep8 = "*"

[tool.mypy]
ignore_missing_imports = true
exclude = [
  'jupyter_notebook_config\.py$',
  'mykaggle/lib/ml_logger\.py$',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
